--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "de.codesmile.imgui",
   "displayName": "CodeSmile IMGUI",
-  "description": "Accessible 'clean code' version of Unity's ~20 year old Immediate Mode GUI system.\n\nPublished under multiple licenses:\n- GPL 3.0 for personal & educational use\n- Custom licensing for Asset Publishers & Sponsors (contact me)\n- Asset Store Terms and EULA for most other uses",
+  "description": "Accessible 'clean code' version of Unity's ~20 year old Immediate Mode GUI system.\n\nPublished under multiple licenses:\n- GPL 3.0 for personal & educational use\n- Custom licensing for Asset Publishers & Sponsors (<a href=\"mailto:steffen@steffenitterheim.de\">contact me</a>)\n- Asset Store Terms and EULA for most other uses",
   "version": "0.1.0",
   "unity": "2021.3",
   "unityRelease": "3f1",
